Fix memory leaks in FaceDetector and TextDetector on Windows

This code was previously using the ComPtr::GetAddressOf() method when
calling functions that output a COM object. This does not release its
reference to the object currently stored in the ComPtr. In at least one
instance, CreateWinBitmapWithPixelFormat(), this leads to a memory leak.
In other instances it is simply less readable than the alternative.

Bug: 914541
Change-Id: I3a18e2ffba4538926a915d64918b13483a4fb6a1
Reviewed-on: https://chromium-review.googlesource.com/c/1375111
Commit-Queue: Robert Liao <robliao@chromium.org>
Reviewed-by: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616358}
Former-commit-id: 2766d748b8a0a8f546ce4c7357ce5c95ac21d71d